--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <link rel="sitemap" type="application/xml" href="/sitemap.xml"/>
+    <title>RPAP</title>
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Random Pick and Presenter"
     />
     <!--
       <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
