--- a/public/index.html
+++ b/public/index.html
@@ -12,19 +12,21 @@
     </script>
 
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <title>RPAP - Random Pick and Presenter</title>
+    <meta name="description" content="Random Pick and Presenter for you"/>
+    <meta property="og:title" content="RPAP - Random Pick and Presenter" />
+    <meta property="og:description" content="Random Pick and Presenter for you"/>
+    <meta property="og:url" content="https://rpap.sidepun.ch" />
+    <meta property="og:image" content="https://rpap.sidepun.ch//favicon.ico" />
+
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="theme-color" content="#000000" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <link rel="sitemap" type="application/xml" href="/sitemap.xml"/>
-    <title>RPAP</title>
-    <meta
-      name="description"
-      content="Random Pick and Presenter"
-    />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
