Rename from pick to picker

--- a/public/index.html
+++ b/public/index.html
@@ -14,12 +14,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>RPAP - Random Pick and Presenter</title>
-    <meta name="description" content="Random Pick and Presenter for you"/>
-    <meta property="og:title" content="RPAP - Random Pick and Presenter" />
-    <meta property="og:description" content="Random Pick and Presenter for you"/>
+    <title>RPAP - Random Picker and Presenter</title>
+    <meta name="description" content="Random Picker and Presenter for you"/>
+    <meta name="keywords" content="random picker, random pick, random choice">
+    <meta property="og:title" content="RPAP - Random Picker and Presenter" />
+    <meta property="og:description" content="Random Picker and Presenter for you"/>
     <meta property="og:url" content="https://rpap.sidepun.ch" />
-    <meta property="og:image" content="https://rpap.sidepun.ch//favicon.ico" />
+    <meta property="og:image" content="https://rpap.sidepun.ch/favicon.ico" />
 
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="theme-color" content="#000000" />
