--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <title>RPAP - Random Picker and Presenter</title>
-    <meta name="description" content="Random Picker and Presenter for you"/>
+    <meta name="description" content="Online random picker service with presentation mode"/>
     <meta name="keywords" content="random picker, random pick, random choice">
     <meta property="og:title" content="RPAP - Random Picker and Presenter" />
     <meta property="og:description" content="Random Picker and Presenter for you"/>
