--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
     <meta name="keywords" content="random picker, random pick, random choice">
     <meta property="og:title" content="RPAP - Random Picker and Presenter" />
     <meta property="og:description" content="Random Picker and Presenter for you"/>
-    <meta property="og:url" content="https://rpap.sidepun.ch" />
-    <meta property="og:image" content="https://rpap.sidepun.ch/favicon.ico" />
+    <meta property="og:url" content="https://rpap.sidepunch.co" />
+    <meta property="og:image" content="https://rpap.sidepunch.co/favicon.ico" />
 
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="theme-color" content="#000000" />
@@ -18,6 +18,17 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <link rel="sitemap" type="application/xml" href="/sitemap.xml"/>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5H3EJ0298W"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-5H3EJ0298W');
+    </script>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
